src/externals/lgpl/neodatis/dot-net/src/test/bad/Neodatis/Odb/Test/VO/Inheritance/FootballPlayer.cs
namespace NeoDatis.Odb.Test.VO.Inheritance
{
	public class FootballPlayer : NeoDatis.Odb.Test.VO.Inheritance.OutdoorPlayer
	{
		private int role;
	}
}
